# ecodi_python

./: .gitignore  Environments.Rmd  README.md  conda.R  pyproject.toml
src/ecodi/: API.py  DBMS.py  KOSIS.py  env.py
src/ecodi/dbms/ddl/mysql/: mt_api_errmsg.sql  mt_api_key.sql  mt_api_param.sql  mt_api_paramset.sql  mt_api_result.sql  mt_api_url.sql  mt_code_list.sql  mt_data_comment.sql  mt_data_item.sql  mt_data_list.sql  mt_data_prvdr.sql  mt_data_update.sql  mt_kosis_indctr.sql  mt_kosis_indexpl.sql  mt_kosis_indlist.sql  mt_kosis_itm.sql  mt_kosis_org.sql  mt_kosis_prd.sql  mt_kosis_prdse.sql  mt_kosis_src.sql  mt_kosis_stat.sql  mt_kosis_statbl.sql  mt_kosis_statexpl.sql  mt_kosis_tbl.sql  mt_log_dataimp.sql  mt_log_manage.sql  mt_region_admi.sql  mt_region_cty.sql  mt_region_mega.sql  mt_schema_list.sql  mt_snippet_clss.sql  mt_sys_user.sql  mt_table_clss.sql  mt_table_column.sql  mt_table_comment.sql  mt_table_list.sql  mt_table_report.sql  mt_table_snippet.sql  mt_table_update.sql
src/ecodi/dbms/ddl/postgresql/: mt_api_errmsg.sql  mt_api_key.sql  mt_api_param.sql  mt_api_paramset.sql  mt_api_result.sql  mt_api_url.sql  mt_code_list.sql  mt_data_comment.sql  mt_data_item.sql  mt_data_list.sql  mt_data_prvdr.sql  mt_data_update.sql  mt_kosis_indctr.sql  (+26 more)
src/ecodi/dbms/meta/: mt_api_errmsg.csv  mt_api_key.csv  mt_api_param.csv  mt_api_paramset.csv  mt_api_result.csv  mt_api_url.csv  mt_code_list.csv  mt_data_list.csv  mt_data_prvdr.csv  mt_kosis_prdse.csv  mt_region_admi.csv  mt_region_cty.csv  mt_region_mega.csv  mt_schema_list.csv  mt_sys_user.csv
