[project]
name = "ecodi"
version = "0.1.0"
authors = [
  { name="Choonghyun Ryu", email="choonghyun.ryu@dplanex.com" },
]
description = "Eco-system for Data Integration and Processing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/choonghyunryu/ecodi_python"
Issues = "https://github.com/choonghyunryu/ecodi_python/issues"