[project]
name = "ecodi"
version = "0.1.1"
authors = [
  { name="Choonghyun Ryu", email="choonghyun.ryu@dplanex.com" },
]
description = "Eco-system for Data Integration and Processing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.package-data]
# 'ecodi' 패키지 안에 있는 모든 .sql 파일 포함
ecodi = ["dbms/ddl/postgresql/*.sql", "dbms/ddl/mysql/*.sql", "dbms/meta/*.csv"]

[project.urls]
Homepage = "https://github.com/choonghyunryu/ecodi_python"
Issues = "https://github.com/choonghyunryu/ecodi_python/issues"